apps/wiki/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-wiki
  labels:
    helm.sh/chart: wiki-2.3.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/instance: release-name
      annotations:
        {}
    spec:
      serviceAccountName: release-name-wiki
      securityContext:
        {}
      containers:
        - name: wiki
          securityContext:
            {}
          image: "requarks/wiki:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            {}
