apps/wiki/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-wiki-test-connection"
  labels:
    helm.sh/chart: wiki-2.3.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-wiki:80']
  restartPolicy: Never
