apps/wiki/templates/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-wiki
  labels:
    helm.sh/chart: wiki-2.3.0
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: http
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: release-name
